--- a/restaurant/public/style/style.css
+++ b/restaurant/public/style/style.css
@@ -96,7 +96,10 @@ header {
   font-size: 3rem;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
-
+.mark{
+  color: yellow;
+  background: yellow;
+}
 @media screen and (max-width: 992px) {
   .card img {
     height: 115px;
