--- a/restaurant/views/index.handlebars
+++ b/restaurant/views/index.handlebars
@@ -19,6 +19,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
+      <h3 class="text-center">{{noResult}}</h3>
       <div class="card-columns">
         {{#each restaurantList}}
             <a href="/restaurants/{{this.id}}" class="text-secondary">
